Testsuite/ManualTests/2858/2858.c.lcov
    1|       |/* { dg-do compile { target { powerpc*-*-linux* && lp64 } } } */
    2|       |/* { dg-options "-Wall" } */
    3|       |/* Testcase to check for ABI compliance of parameter passing
    4|       |   for the PowerPC64 ABI.  */
    5|       |
    6|       |typedef int __attribute__((vector_size(16))) v4si;
    7|       |typedef int __attribute__((vector_size(8))) v2si;
    8|       |
    9|      1|v4si f(v4si v) { /* { dg-error "altivec instructions are disabled" "PR18631" {
   10|      1|                    xfail *-*-* } } */
   11|      1|  return v;
   12|      1|}
   13|       |
   14|      1|v2si g(v2si v) { return v; }
   15|       |
   16|      1|int main() {
   17|      1|  v4si v = {1, 2, 3, 4};
   18|      1|  v2si w = {5, 6};
   19|      1|  v = f(v); /* { dg-error "altivec instructions are disabled" "PR18631" { xfail
   20|      1|             *-*-* } } */
   21|      1|  w = g(w);
   22|      1|  return 0;
   23|      1|}

